feat(slot-selector): display variations of time slots for dev

--- a/app/src/components/slot_reservation/SlotSelector.module.scss
+++ b/app/src/components/slot_reservation/SlotSelector.module.scss
@@ -3,7 +3,7 @@
   max-width: 30rem;
   height: 20rem;
   border: 2px dashed #000000;
-  background-color: #9c9c9c;
+  background-color: #ffffff;
   margin: 1rem;
   display: flex;
   align-items: center;
