feat(footer): add footer main placeholders

--- a/app/src/components/footer/Footer.module.scss
+++ b/app/src/components/footer/Footer.module.scss
@@ -1,9 +1,9 @@
+@import '../../styles/variables.scss';
+
 footer {
+  display: flex;
   padding: 20px 0;
-  text-align: center;
-  color: #6c757d;
   font-size: 14px;
-  border-top: 1px solid #e9ecef;
   margin-top: 20px;
   position: relative;
   bottom: 0;
@@ -11,4 +11,55 @@ footer {
   left: 0;
   right: 0;
   z-index: 10;
+
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.description {
+  display: flex;
+  flex-direction: row;
+  margin-inline: 2rem;
+
+  .about {
+    cursor: pointer;
+
+    &:hover {
+      color: $on-footer;
+    }
+  }
+
+  .privacy {
+    cursor: pointer;
+    margin-left: 2rem;
+
+    &:hover {
+      color: $on-footer;
+    }
+  }
+}
+
+.contact-info {
+  display: flex;
+  flex-direction: row;
+  margin-inline: 2rem;
+  align-items: center;
+
+  .email {
+    cursor: pointer;
+    margin-left: 0.2rem;
+  }
+
+  .social-media {
+    display: flex;
+    flex-direction: row;
+    margin-left: 1rem;
+
+    font-size: 2rem;
+  }
+
+  .copyright {
+    margin-left: 1rem;
+  }
 }
