--- a/app/src/styles/_variables.scss
+++ b/app/src/styles/_variables.scss
@@ -14,4 +14,7 @@ $on-primary-light: #fff7c0;
 $very-dark-accent: #01234e;
 
 $footer-background: #1a1a5e;
+$on-footer: #66b2ff;
+
 $header-background: #1a1a5e;
+$on-header: #66b2ff;
