--- a/app/src/pages/MainPage.module.scss
+++ b/app/src/pages/MainPage.module.scss
@@ -1,10 +1,10 @@
-@import '../styles/variables.scss';
+@use '../styles/variables.scss' as variables;
 
 .title {
   font-size: 1rem;
   color: #ffffff;
   text-align: center;
-  background-color: $very-dark-accent;
+  background-color: variables.$very-dark-accent;
   padding: 1rem;
   width: fit-content;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
@@ -38,7 +38,7 @@
 
   .description-container {
     font-size: 1.5rem;
-    color: $on-primary-light;
+    color: variables.$on-primary-light;
     text-align: center;
     flex: 2;
   }
