feat(login): create sign in and sign up ui

--- a/app/src/components/auth/login/GoogleLoginButton.module.scss
+++ b/app/src/components/auth/login/GoogleLoginButton.module.scss
@@ -1,6 +1,6 @@
 .google-sign-in-button {
+  background-color: yellowgreen;
   display: flex;
-
   align-items: center;
   justify-content: center;
 
@@ -14,6 +14,9 @@
   }
 
   button {
+    width: 100%;
+    margin: 0;
+
     background-color: white;
     display: flex;
     align-items: center;
