feat(booking): add slot selection feature

--- a/app/src/components/slot_reservation/time_slot/TimeSlot.module.scss
+++ b/app/src/components/slot_reservation/time_slot/TimeSlot.module.scss
@@ -4,7 +4,7 @@ $available-color: #000000;
 $reserved-color: #ff0000;
 $past-color: #9c9c9c;
 
-$selected-border-color: #0800ff;
+$selected-border-color: #ff8800;
 
 .time-slot {
   width: $box-size;
