--- a/app/src/components/slot_reservation/time_slot/TimeSlot.module.scss
+++ b/app/src/components/slot_reservation/time_slot/TimeSlot.module.scss
@@ -2,6 +2,7 @@ $box-size: 4rem;
 
 $available-color: #000000;
 $reserved-color: #ff0000;
+$own-reserved-color: #6ac503;
 $past-color: #9c9c9c;
 
 $selected-border-color: #ff8800;
@@ -31,6 +32,11 @@ $selected-border-color: #ff8800;
   &.reserved {
     background-color: $reserved-color;
     cursor: not-allowed;
+  }
+
+  &.own-reserved {
+    background-color: $own-reserved-color;
+    cursor: pointer;
   }
 
   &.past {
